# ComputerVisionLabs

./: .gitignore  CMakeLists.txt  readme.md
cv_lab1/: CMakeLists.txt  main.cpp  readme.md
cv_lab2/: CMakeLists.txt  TickMeter.cpp  lab2.cpp  main.cpp  readme.md
cv_lab3/: begunok.cpp  cvDirectory.cpp  cvDirectory.h  main.cpp  readme.md
cv_lab4/: TickMeter.h  main.cpp  readme.md
cv_lab5/: calibrate_camera.cpp  calibration.xml  create_aruco_marker.cpp  main.cpp  readme.md
